Use canonical `java.specification.version` for java version
This matches how the kotlin compiler checks the current Java version at runtime and makes things a good deal simpler to parse.